// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend doesn't render series when it cannot retrieve a background color from the series style property 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#0595DB",
          },
          undefined,
        ]
      }
    />
    <Text>
      Line 1
    </Text>
  </View>
</View>
`;

exports[`Legend doesn't render series when there is no series name 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          undefined,
        ]
      }
    />
    <Text>
      Line 2
    </Text>
  </View>
</View>
`;

exports[`Legend doesn't render when there are no series 1`] = `null`;

exports[`Legend renders 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#0595DB",
          },
          undefined,
        ]
      }
    />
    <Text>
      Line 1
    </Text>
  </View>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          undefined,
        ]
      }
    />
    <Text>
      Line 2
    </Text>
  </View>
</View>
`;
